tests/sumo/basic/person/errors/testsuite.sumo
# handle invalid input without crashing
# 
invalid_busstop
duplicate_id

# test riding a car where the from edge has access to the prior destinationStop
trainStop_car_disconnected
